# perf24

./: .gitignore  README.md  perf.data  perf24.example.toml  pyproject.toml  setup.py  submission.md  test_output.txt
perf24/: __init__.py
src/perf24/: __init__.py  cli.py  collector.py  config.py  flamegraph.py  query.py
src/perf24.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
systemd/: perf24.service
tests/: test_config.py  test_flamegraph.py  test_query.py
